# starchart

./: .dockerignore  .env-sample  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  crates.js  docker-compose-dev-deps.yml  gitea.sh  help.html  requirements.txt  search-index.js  settings.html  source-files.js  spider.rs  spider.sh  starchart.sh
.github/workflows/: coverage.yml  linux.yml
api_routes/: Cargo.toml  all.html  constant.ROUTES.html  index.html  sidebar-items.js  struct.Api.html  struct.Introducer.html  struct.LatestResp.html  struct.MiniIndex.html  struct.Search.html  struct.SearchRepositoryReq.html  struct.SearchRepositoryResp.html
api_routes/src/: lib.rs
config/: default.toml
db/db-core/: Cargo.toml
db/db-core/src/: errors.rs  lib.rs  ops.rs  tests.rs
db/db-sqlx-sqlite/: Cargo.toml  sqlx-data.json
db/db-sqlx-sqlite/migrations/: 20220405113942_world_forges.sql  20230211075309_starchart_import.sql  20230223063159_starchart_fts_repository.sql  20230228083200_starchart_introducer.sql  20230302072543_starchart_mini_index.sql  20230302094417_starchart_federated_mini_index.sql  20230302132435_starchart_imported_starcharts.sql
db/db-sqlx-sqlite/src/: errors.rs  lib.rs  tests.rs
db/migrator/: Cargo.toml
db_core/: all.html  enum.ForgeImplementation.html  fn.clean_url.html  fn.get_hostname.html  index.html  sidebar-items.js  struct.AddRepository.html  struct.AddUser.html  struct.Challenge.html  struct.CreateForge.html  struct.Forge.html  struct.Repository.html  struct.Starchart.html  struct.User.html  trait.CloneSPDatabase.html  trait.SCDatabase.html
db_core/dev/: attr.async_trait.html  index.html
db_core/errors/: enum.DBError.html  index.html  type.BoxDynError.html  type.DBResult.html
db_core/ops/: index.html  trait.Connect.html  trait.DBOps.html  trait.GetConnection.html  trait.Migrate.html
db_core/prelude/: index.html
db_core/tests/: fn.adding_forge_works.html  fn.forge_type_exists_helper.html  fn.instance_introducer_helper.html  fn.mini_index_helper.html  index.html  sidebar-items.js
db_sqlx_sqlite/: all.html  enum.ConnectionOptions.html  index.html  sidebar-items.js  struct.Conn.html  struct.Database.html  struct.Fresh.html
db_sqlx_sqlite/dev/: attr.async_trait.html  enum.DBError.html  enum.Error.html  enum.ForgeImplementation.html  fn.clean_url.html  fn.get_hostname.html  index.html  sidebar-items.js  struct.AddRepository.html  struct.AddUser.html  struct.Challenge.html  struct.CreateForge.html  struct.Forge.html  struct.Repository.html  struct.Starchart.html  struct.User.html  trait.CloneSPDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GetConnection.html  trait.Migrate.html  trait.SCDatabase.html  type.BoxDynError.html  type.DBResult.html
db_sqlx_sqlite/errors/: fn.map_register_err.html  index.html  sidebar-items.js
db_sqlx_sqlite/prelude/: enum.DBError.html  enum.ForgeImplementation.html  fn.clean_url.html  fn.get_hostname.html  index.html  sidebar-items.js  struct.AddRepository.html  struct.AddUser.html  struct.Challenge.html  struct.CreateForge.html  struct.Forge.html  struct.Repository.html  struct.Starchart.html  struct.User.html  trait.CloneSPDatabase.html  trait.Connect.html  trait.DBOps.html  trait.GetConnection.html  trait.Migrate.html  trait.SCDatabase.html  type.BoxDynError.html  type.DBResult.html
docs/: ARCHITECTURE.md  HACKING.md  published-crwaled-data.md
federate/federate-core/: Cargo.toml
federate/federate-core/src/: errors.rs  lib.rs  tests.rs
federate/publiccodeyml/: Cargo.toml
federate/publiccodeyml/src/: errors.rs  lib.rs  schema.rs  tests.rs
federate_core/: all.html  constant.ROUTES.html  fn.get_hostname.html  index.html  sidebar-items.js  struct.Api.html  struct.Introducer.html  struct.LatestResp.html  struct.MiniIndex.html  struct.Search.html  struct.SearchRepositoryReq.html  struct.SearchRepositoryResp.html  trait.Federate.html
federate_core/tests/: fn.adding_forge_works.html  index.html  sidebar-items.js
forge/forge-core/: Cargo.toml
forge/forge-core/src/: lib.rs
forge/gitea/: Cargo.toml
forge/gitea/src/: lib.rs  schema.rs
forge/gitea/tests/schema/gitea/: git.batsense.net.json
forge_core/: all.html  index.html  sidebar-items.js  struct.CrawlResp.html  struct.Repository.html  struct.User.html  trait.CloneSPForge.html  trait.SCForge.html  type.Repositories.html  type.Tags.html  type.UserMap.html
forge_core/dev/: attr.async_trait.html  index.html
forge_core/prelude/: attr.async_trait.html  index.html
gitea/: all.html  index.html  sidebar-items.js  struct.Gitea.html
gitea/schema/: enum.Permission.html  index.html  sidebar-items.js  struct.InternalIssueTracker.html  struct.Organization.html  struct.RepoTransfer.html  struct.Repository.html  struct.SearchResults.html  (+3 more)
mock_gitea/: Cargo.toml  Dockerfile  Makefile  build.rs  sqlx-data.json
mock_gitea/config/: default.toml
mock_gitea/data/: README.md  unique.txt
mock_gitea/migrations/: 20230309061150_mock_gitea_repository.sql  20230310172343_mock_gitea_initialize_logs.sql
mock_gitea/migrator/: Cargo.toml
mock_gitea/migrator/src/: main.rs
mock_gitea/scripts/: entrypoint.sh
mock_gitea/src/: api.rs  ctx.rs  db.rs  errors.rs  init.rs  main.rs  routes.rs  settings.rs  tests.rs  utils.rs
publiccodeyml/: all.html  constant.CONTENTS_DIR.html  constant.INSTANCE_INFO_FILE.html  constant.REPO_INFO_FILE.html  constant.USER_INFO_FILE.html  index.html  sidebar-items.js  struct.PccFederate.html
scripts/: entrypoint.sh  gitea.py
src/: api.rs  counter.rs  ctx.rs  data.rs  db.rs  errors.rs  federate.rs  forge.rs  gitea.rs  introduce.rs  main.rs  master.rs  routes.rs  search.rs  settings.rs  spider.rs  tests.rs  utils.rs  verify.rs
starchart/: all.html  constant.CACHE_AGE.html  constant.DOMAIN.html  constant.GIT_COMMIT_HASH.html  constant.PKG_NAME.html  constant.VERSION.html  fn.main.html  fn.services.html  index.html  sidebar-items.js  struct.FILES.html  type.ArcCtx.html  type.WebCtx.html  type.WebDB.html  type.WebData.html  type.WebFederate.html
utils/cache-bust/: .gitignore  Cargo.toml
(+536 files in other folders)
