[package]
name = "starchart"
repository = "https://github.com/forgeflux-org/starchart"
version = "0.1.0"
authors = ["realaravinth <realaravinth@batsense.net>"]
description = "ForgeFlux StarChart - Federated forge spider"
documentation = "https://forgeflux.org/"
edition = "2021"
license = "AGPLv3 or later version"
build = "build.rs"

[workspace]
exclude = ["db/migrator"]
members = [
    ".",
    "db/db-core",
    "db/db-sqlx-sqlite",
    "forge/forge-core",
    "forge/gitea",
    "federate/federate-core",
    "federate/publiccodeyml"
]

[dependencies]
actix-rt = "2.7"
async-trait = "0.1.51"
config = "0.13.0"
lazy_static = "1.4.0"
rand = "0.8.5"
tera = "1.15"
tokio = { version = "1.17", features = ["fs", "time"] }
url = { version  = "2.2.2", features = ["serde"] }
validator = { version = "0.15", features = ["derive"]}
derive_more = "0.99.17"
log = "0.4.16"

[dependencies.reqwest]
features = ["rustls-tls-native-roots", "gzip", "deflate", "brotli", "json"]
version = "0.11.10"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.trust-dns-resolver]
features = ["tokio-runtime", "dns-over-tls", "dns-over-rustls"]
version = "0.21.1"

[dependencies.db-core]
path = "./db/db-core"

#[dependencies.db-sqlx-postgres]
#path = "./db/db-sqlx-postgres"
#
[dependencies.db-sqlx-sqlite]
path = "./db/db-sqlx-sqlite"


[dependencies.gitea]
path = "./forge/gitea"

[dependencies.forge-core]
path = "./forge/forge-core"

[dependencies.sqlx]
features = ["runtime-actix-rustls", "uuid", "postgres", "time", "offline", "sqlite"]
version = "0.5.11"
