[package]
name = "mock_gitea"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7"
actix-web = "4.0.1"
async-trait = "0.1.51"
config = "0.13.0"
lazy_static = "1.4.0"
rand = "0.8.5"
tera = "1.15"
tokio = { version = "1.17", features = ["fs", "time", "sync"] }
url = { version  = "2.2.2", features = ["serde"] }
validator = { version = "0.15", features = ["derive"]}
derive_more = "0.99.17"
log = "0.4.16"
pretty_env_logger = "0.4"
rust-embed = "6.3.0"
urlencoding = "2.1.0"
clap = { version = "4.0.32", features = ["derive"] }
actix = "0.13.0"
derive_builder = "0.12.0"

[dependencies.actix-web-codegen-const-routes]
git = "https://github.com/realaravinth/actix-web-codegen-const-routes"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.serde_json]
version = "1"

[dependencies.sqlx]
features = ["runtime-actix-rustls", "uuid", "postgres", "time", "offline", "sqlite"]
version = "0.6.2"

[dependencies.gitea]
path = "../forge/gitea"

[workspace]
exclude = ["db/migrator"]
