[package]
name = "db-core"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/forgeflux-org/starchart"
repository = "https://github.com/forgeflux-org/starchart"
documentation = "https://github.con/forgeflux-org/starchart"
readme = "https://github.com/forgeflux-org/starchart/blob/master/README.md"
license = "AGPLv3 or later version"
authors = ["Aravinth Manivannan <realaravinth@batsense.net>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
thiserror = "1.0.30"
serde = { version = "1", features = ["derive"]}
url = { version  = "2.2.2", features = ["serde"] }

[features]
default = []
test = []

[dev-dependencies]
serde_json = "1"
